--- a/LeetCode/591-600/594. 最长和谐子序列（简单）.md
+++ b/LeetCode/591-600/594. 最长和谐子序列（简单）.md
@@ -50,9 +50,8 @@ class Solution {
         Arrays.sort(nums);
         int n = nums.length, ans = 0;
         for (int i = 0, j = 0; j < n; j++) {
-            while (j < n && nums[j] - nums[i] < 1) j++;
-            while (j < n && i < j && nums[j] - nums[i] > 1) i++;
-            if (i < n && j < n && nums[j] - nums[i] == 1) ans = Math.max(ans, j - i + 1);
+            while (i < j && nums[j] - nums[i] > 1) i++;
+            if (nums[j] - nums[i] == 1) ans = Math.max(ans, j - i + 1);
         }
         return ans;
     }
