--- a/LeetCode/451-460/458. 可怜的小猪（困难）.md
+++ b/LeetCode/451-460/458. 可怜的小猪（困难）.md
@@ -78,7 +78,7 @@ Tag : 「数学」
 
 **上述做法，只是阐述了我们存在这样的可行解，需要证明这样的做法是最优解。**
 
-利用 [香农熵](https://baike.baidu.com/item/香农熵)，我们可以计算明确熵值（不确定性）的下界，公式为：
+利用 [香农熵](https://baike.baidu.com/item/香农熵)，我们可以计算明确熵值，公式为：
 
 $$
 H(X) = - \sum_{x}^{} P(x) \log_2[P(x)]
