--- a/LeetCode/451-460/458. 可怜的小猪（困难）.md
+++ b/LeetCode/451-460/458. 可怜的小猪（困难）.md
@@ -48,7 +48,7 @@ Tag : 「数学」
 
 ### 数学
 
-考虑到部分有宗教信仰的同学（我不是🤣），我们用实验对象来代指题干的小动物。同时为了方便，我们使用 $n$ 代指有多少桶水，$d$ 为实验对象的反应时间，$t$ 为测试总时间。
+我们用实验对象来代指题干的小动物。同时为了方便，我们使用 $n$ 代指有多少桶水，$d$ 为实验对象的反应时间，$t$ 为测试总时间。
 
 根据题意，最大测试次数为 $k = \left \lfloor \frac{t}{d} \right \rfloor$。
 
