--- a/LeetCode/431-440/438. 找到字符串中所有字母异位词（中等）.md
+++ b/LeetCode/431-440/438. 找到字符串中所有字母异位词（中等）.md
@@ -84,7 +84,7 @@ class Solution {
 * 当滑动窗口的右端点右移时（增加字符），对 $cnt$ 执行右端点字符的「抵消」操作；
 * 当滑动窗口的左端点右移时（减少字符），对 $cnt$ 执行左端点字符的「恢复」操作。
 
-同时，使用变量 $b$ 统计 `p` 中不同字符的数量，使用变量 $a$ 统计滑动窗口（子串）内有多少个字符词频与 $p$ 相等。
+同时，使用变量 $a$ 统计 `p` 中不同字符的数量，使用变量 $b$ 统计滑动窗口（子串）内有多少个字符词频与 $p$ 相等。
 
 当滑动窗口移动（ 执行「抵消/恢复」）时，如果「抵消」后该字符词频为 $0$，说明本次右端点右移，多产生了一位词频相同的字符；如果「恢复」后该字符词频数量为 $1$，说明少了一个为词频相同的字符。当且仅当 $a = b$ 时，我们找到了一个新的异位组。
 
