--- a/LeetCode/391-400/400. 第 N 位数字（中等）.md
+++ b/LeetCode/391-400/400. 第 N 位数字（中等）.md
@@ -46,7 +46,7 @@ $$
 (x - s + 1) * len \geq n
 $$
 
-进行变形可得：
+变形可得：
 
 $$
 x \geq \left \lfloor \frac{n}{len} \right \rfloor - 1 + s
@@ -66,12 +66,49 @@ class Solution {
         long s = (long) Math.pow(10, len - 1);
         long x = n / len - 1 + s;
         n -= (x - s + 1) * len;
-        return n == 0 ? (int) (x % 10) : (int) ((x + 1) / (int) (Math.pow(10, len - n)) % 10);
+        return n == 0 ? (int) (x % 10) : (int) ((x + 1) / Math.pow(10, len - n) % 10);
     }
 }
 ```
 * 时间复杂度：$O(\log{n})$
 * 空间复杂度：$O(1)$
+
+---
+
+### 补充
+
+看到评论区，不少小伙伴对上述推导理解感到困难。我们可以换个思路，从更加纯粹直接的角度进行分析。
+
+首先和上述解法一样，我们还是需要先对 $n$ 进行第一阶段的试减（更新 $n$），得到目标数字所在的数值的长度 $len$ 是多少。
+
+然后根据 $len$ 我们可以算得起点值 $s = 10^{len - 1}$（例如 $len = 2$ 时，$s = 10$；$len = 3$ 时，$s = 100$）。
+
+由于每个数长度都是 $len$，因此我们可以用剩余的数 $n$ 除 $len$，得到从起点的偏移量是多少（并将偏移量累加更新到 $s$），然后对 $n$ 做第二阶段的试减，减去的值就是 $\left \lfloor \frac{n}{len} \right \rfloor * len$。
+
+如果试减后结果恰好为 $0$，那么答案为当前 $s$ 的最后一个数字；否则（试减结果大于 $0$），则是 $x + 1$ 中（十进制表示，从左往右数）的第 $n$ 个数字。
+
+代码：
+```Java
+class Solution {
+    public int findNthDigit(int n) {
+        int len = 1;
+        while (len * 9 * Math.pow(10, len - 1) < n) {
+            n -= len * 9 * Math.pow(10, len - 1);
+            len++;
+        }
+        long s = (long) Math.pow(10, len - 1);
+        s += n / len - 1;
+        n -= len * (n / len);
+        return n == 0 ? (int) (s % 10) : (int) ((s + 1) / Math.pow(10, len - n) % 10);
+    }
+}
+```
+* 时间复杂度：$O(\log{n})$
+* 空间复杂度：$O(1)$
+
+---
+
+**最终你会发现，两种做法是完全等价的，只是对应了不同的角度描述而已。**
 
 ---
 
