--- a/LeetCode/771-780/773. 滑动谜题（困难）.md
+++ b/LeetCode/771-780/773. 滑动谜题（困难）.md
@@ -246,7 +246,7 @@ class Solution {
         int cnt = 0;
         for (int i = 0; i < list.size(); i++) {
             for (int j = i + 1; j < list.size(); j++) {
-                if (list.get(i) < list.get(j)) cnt++;
+                if (list.get(i) > list.get(j)) cnt++;
             }
         }
         return cnt % 2 == 0;
