--- a/LeetCode/371-380/372. 超级次方（中等）.md
+++ b/LeetCode/371-380/372. 超级次方（中等）.md
@@ -36,7 +36,7 @@ Tag : 「数学」、「快速幂」
 提示：
 * $1 <= a <= 2^{31} - 1$
 * $1 <= b.length <= 2000$
-* `0 <= b[i] <= 9`
+* $0 <= b[i] <= 9$
 * b 不含前导 0
 
 ---
@@ -45,7 +45,7 @@ Tag : 「数学」、「快速幂」
 
 根据题意，要我们求得的是 $a^b \bmod {1337}$ 的值，其中 $b$ 是以数组形式给出。
 
-刚一看是一道快速幂的题目（事实上也确实可以使用快速幂，但不是必须），但由于 $b$ 是数组形式，因此我们还需要对其进行分解。
+刚一看是一道快速幂的题目（事实上也确实可以使用快速幂，但不是必须），由于 $b$ 是数组形式，因此我们还需要对其进行分解。
 
 假设 $b$ 所代表的数值为 $K$，则有：
 
