--- a/LeetCode/1811-1820/1816. 截断句子（简单）.md
+++ b/LeetCode/1811-1820/1816. 截断句子（简单）.md
@@ -55,6 +55,8 @@ s 中的单词为 ["What", "is" "the", "solution", "to", "this", "problem"]
 
 根据题意进行模拟，在拼接答案时对「空格」进行计数即可。
 
+可通过 `StringBuilder` 实现拼接，也可以使用变量 `idx` 记录答案的结尾位置。
+
 代码：
 ```Java
 class Solution {
@@ -67,6 +69,20 @@ class Solution {
             if (cnt < k) sb.append(c);
         }
         return sb.toString();
+    }
+}
+```
+
+
+```Java
+class Solution {
+    public String truncateSentence(String s, int k) {
+        int n = s.length(), idx = 0;
+        while (idx < n) {
+            if (s.charAt(idx) == ' ' && --k == 0) break;
+            idx++;
+        }
+        return s.substring(0, idx);
     }
 }
 ```
