--- a/LeetCode/901-910/909. 蛇梯棋（中等）.md
+++ b/LeetCode/901-910/909. 蛇梯棋（中等）.md
@@ -6,51 +6,59 @@ Tag : 「图论 BFS」
 
 
 
-$N * N$ 的棋盘 board 上，按从 1 到 $N*N$ 的数字给方格编号，编号 从左下角开始，每一行交替方向。
 
-例如，一块 $6 x 6$ 大小的棋盘，编号如下：
+给你一个大小为 `n x n` 的整数矩阵 `board` ，方格按从 $1$ 到 $n^2$ 编号，编号遵循 转行交替方式 ，从左下角开始 （即，从 `board[n - 1][0]` 开始）每一行交替方向。
 
-![](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2019/01/31/snakes.png)
+玩家从棋盘上的方格 $1$ （总是在最后一行、第一列）开始出发。
 
-r 行 c 列的棋盘，按前述方法编号，棋盘格中可能存在 “蛇” 或 “梯子”；如果 `board[r][c] != -1`，那个蛇或梯子的目的地将会是 `board[r][c]`。
+每一回合，玩家需要从当前方格 $curr$ 开始出发，按下述要求前进：
 
-玩家从棋盘上的方格 1 （总是在最后一行、第一列）开始出发。
+* 选定目标方格 `next`，目标方格的编号符合范围 $[curr + 1, min(curr + 6, n^2)]$。
+* 该选择模拟了掷 六面体骰子 的情景，无论棋盘大小如何，玩家最多只能有 $6$ 个目的地。
+* 传送玩家：如果目标方格 `next` 处存在蛇或梯子，那么玩家会传送到蛇或梯子的目的地。否则，玩家传送到目标方格 `next`。 
+* 当玩家到达编号 $n^2$ 的方格时，游戏结束。
 
-每一回合，玩家需要从当前方格 x 开始出发，按下述要求前进：
+`r` 行 `c` 列的棋盘，按前述方法编号，棋盘格中可能存在 “蛇” 或 “梯子”；
 
-* 选定目标方格：选择从编号 `x+1`，`x+2`，`x+3`，`x+4`，`x+5`，或者 `x+6` 的方格中选出一个目标方格 s ，目标方格的编号 <= $N*N$。
-  * 该选择模拟了掷骰子的情景，无论棋盘大小如何，你的目的地范围也只能处于区间 [x+1, x+6] 之间。
-* 	传送玩家：如果目标方格 S 处存在蛇或梯子，那么玩家会传送到蛇或梯子的目的地。否则，玩家传送到目标方格 S。 
-注意，玩家在每回合的前进过程中最多只能爬过蛇或梯子一次：就算目的地是另一条蛇或梯子的起点，你也不会继续移动。
+如果 `board[r][c] != -1`，那个蛇或梯子的目的地将会是 `board[r][c]`。
 
-返回达到方格 $N*N$ 所需的最少移动次数，如果不可能，则返回 -1。
+编号为 $1$ 和 $n^2$ 的方格上没有蛇或梯子。
 
-示例：
+注意，玩家在每回合的前进过程中最多只能爬过蛇或梯子一次：就算目的地是另一条蛇或梯子的起点，玩家也 不能 继续移动。
+
+* 举个例子，假设棋盘是 $[[-1,4],[-1,3]]$ ，第一次移动，玩家的目标方格是 $2$ 。那么这个玩家将会顺着梯子到达方格 $3$ ，但 不能 顺着方格 $3$ 上的梯子前往方格 $4$ 。
+
+返回达到编号为 $n^2$ 的方格所需的最少移动次数，如果不可能，则返回 $-1$。
+
+示例 1：
+![](https://assets.leetcode.com/uploads/2018/09/23/snakes.png)
 ```
-输入：[
+输入：board = 
+[
 [-1,-1,-1,-1,-1,-1],
 [-1,-1,-1,-1,-1,-1],
 [-1,-1,-1,-1,-1,-1],
 [-1,35,-1,-1,13,-1],
 [-1,-1,-1,-1,-1,-1],
-[-1,15,-1,-1,-1,-1]]
+[-1,15,-1,-1,-1,-1]
+]
 
 输出：4
 
 解释：
-首先，从方格 1 [第 5 行，第 0 列] 开始。
-你决定移动到方格 2，并必须爬过梯子移动到到方格 15。
-然后你决定移动到方格 17 [第 3 行，第 5 列]，必须爬过蛇到方格 13。
-然后你决定移动到方格 14，且必须通过梯子移动到方格 35。
-然后你决定移动到方格 36, 游戏结束。
-可以证明你需要至少 4 次移动才能到达第 N*N 个方格，所以答案是 4。
+首先，从方格 1 [第 5 行，第 0 列] 开始。 
+先决定移动到方格 2 ，并必须爬过梯子移动到到方格 15 。
+然后决定移动到方格 17 [第 3 行，第 4 列]，必须爬过蛇到方格 13 。
+接着决定移动到方格 14 ，且必须通过梯子移动到方格 35 。 
+最后决定移动到方格 36 , 游戏结束。 
+可以证明需要至少 4 次移动才能到达最后一个方格，所以答案是 4 。 
 ```
 
 提示：
-* 2 <= board.length = board[0].length <= 20
-* `board[i][j]` 介于 1 和 $N*N$ 之间或者等于 -1。
-* 编号为 1 的方格上没有蛇或梯子。
-* 编号为 $N*N$ 的方格上没有蛇或梯子。
+* $n == board.length == board[i].length$
+* $2 <= n <= 20$
+* $grid[i][j]$ 的值是 $-1$ 或在范围 $[1, n^2]$ 内
+* 编号为 $1$ 和 $n^2$ 的方格上没有蛇或梯子
 
 ---
 
