--- a/LeetCode/1031-1040/1034. 边界着色（中等）.md
+++ b/LeetCode/1031-1040/1034. 边界着色（中等）.md
@@ -136,7 +136,7 @@ class Solution {
             if (nx < 0 || nx >= m || ny < 0 || ny >= n) continue;
             if (grid[x][y] != grid[nx][ny]) continue;
             else cnt++;
-            if (ans[nx][ny] == -1) continue;
+            if (ans[nx][ny] != 0) continue;
             ans[nx][ny] = -1;
             dfs(nx, ny);
         }
