--- a/LeetCode/621-630/630. 课程表 III（困难）.md
+++ b/LeetCode/621-630/630. 课程表 III（困难）.md
@@ -76,21 +76,21 @@ Tag : 「贪心」
 可用「归纳法 + 反证法」证明该做法能够取到最优排列之一，定义最优排列为「总课程数最大，且总耗时最少」的合法排列。
 
 1. 在课程数量相同的前提下，该做法得到的排列总耗时最少
-  
+    
     这点可通过「反证法」来证明：当不满足「最后完成时间」时，我们总是弹出「持续时间」最长的课程来进行回退，因此在所有课程对答案的贡献都是 $1$ 的前提下，该做法能够确保总耗时最少。即当堆中元素数量被调整为 $x$ 时，必然是由元素数量为 $x + 1$ 时，将持续时间最长的课程弹出所得来。
 
 2. 该做法能够确保取得最大课程数量
 
     在得证第 $1$ 点后，可用「归纳法」进行证明第 $2$ 点：只考虑一个课程的情况下（假定 $courses[0][0] < courses[0][1]$），选该课程会比不选更好。
     将 $courses[0]$ 的最优解排列记为 $s[0]$，当确定了 $s[0]$ 后再考虑如何处理 $courses[1]$ 来得到 $s[1]$。
-    首先可知 $s[1]$ 只有两种情况：
+    首先可知 $s[1]$ 只有三种情况：
     * $s[1] = s[0]$：意味着 $courses[1]$ 不参与到最优解排列当中；
-    * $s[1] \neq s[0]$，但两个最优解长度相同：意味着 $s[1]$ 是由 $courses[i]$ 替换了 $s[0]$ 中的某个课程而来，且基于证明 $1$ 可以得证，被替换的课程持续时间比 $courses[i]$ 要长；
-    * $s[1] \neq s[0]$，且 $s[1]$ 长度比 $s[0]$ 大 $1$：意味着 $s[i]$ 是由 $courses[i]$ 最接追加到 $s[0]$ 而来。
+    * $s[1] \neq s[0]$，但两个最优解长度相同：意味着 $s[1]$ 是由 $courses[1]$ 替换了 $s[0]$ 中的某个课程而来（此时只有第 $0$ 个课程），且基于证明 $1$ 可以得证，被替换的课程持续时间比 $courses[1]$ 要长；
+    * $s[1] \neq s[0]$，且 $s[1]$ 长度比 $s[0]$ 大 $1$：意味着 $s[1]$ 是由 $courses[1]$ 最接追加到 $s[0]$ 而来。
 
     综上，我们证明了，如果已知某个边界情况的最优解，那么由边界的最优解可推导出在此基础上多考虑一个课程时的最优解。即以上分析可以推广到任意的 $s[i - 1]$ 和 $s[i]$。
 
-    需要注意，在推广到任意的 $s[i - 1]$ 和 $s[i]$ 时，还需要证明在已知 $s[i - 1]$ 时，多考虑一个 $courses[i]$ 不会出现 $s[i]$ 的和 $s[i - 1]$ 的长度差超过 $1$ 的情况。
+    **需要注意，在推广到任意的 $s[i - 1]$ 和 $s[i]$ 时，还需要证明在已知 $s[i - 1]$ 时，多考虑一个 $courses[i]$ 不会出现 $s[i]$ 的和 $s[i - 1]$ 的长度差超过 $1$ 的情况。**
     这个基于已得证的第 $1$ 点，再用反证法可证：如果在 $s[i - 1]$ 的基础上多考虑一个 $courses[i]$ 能够使得总长度增加超过 $1$，说明存在一个「之前没有被选的课程」+「课程 $courses[i]$」的持续时间比「被替换的课程」短。
     那么使用这个「之前没有被选的课程」直接替换「被替换的课程」可得到长度与 $s[i - 1]$ 相同，且总耗时更短的排列方案，这与 $s[i - 1]$ 本身是最优排列冲突。
 
