--- a/Index/图论：拓扑排序.md
+++ b/Index/图论：拓扑排序.md
@@ -1,4 +1,5 @@
 | 题目                                                         | 题解                                                         | 难度 | 推荐指数 |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ---- | -------- |
 | [802. 找到最终的安全状态](https://leetcode-cn.com/problems/find-eventual-safe-states/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/find-eventual-safe-states/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-isy6u/) | 中等 | 🤩🤩🤩🤩     |
+| [851. 喧闹和富有](https://leetcode-cn.com/problems/loud-and-rich/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/loud-and-rich/solution/gong-shui-san-xie-tuo-bu-pai-xu-yun-yong-ylih/) | 中等 | 🤩🤩🤩🤩     |
 
