--- a/LeetCode/851-860/851. 喧闹和富有（中等）.md
+++ b/LeetCode/851-860/851. 喧闹和富有（中等）.md
@@ -58,6 +58,8 @@ answer[7] = 7，
 
 因此我们可以在建图过程中，同时统计每个节点的入度数，然后在图中跑一遍拓扑排序来求得答案 $ans$。
 
+**对「图论 拓扑排序」不了解的同学，可以先看前置 🧀：[拓扑排序入门](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247489706&idx=1&sn=771cd807f39d1ca545640c0ef7e5baec&chksm=fd9cb3b5caeb3aa333809633f09e3967c8f62d10feec5a463c7e30d4781e1fecb50e7f46e4af&token=126965152&lang=zh_CN#rd)，里面详细说明了「拓扑排序的基本流程」&「反向图 + 拓扑排序做法的正确性证明」。**
+
 起始时，每个 $ans[i] = i$，然后将统计入度为 $0$ 的节点进行入队，每次出队时，将该节点删掉，对该 DAG 带来影响是「该节点的邻点的入度减一」，若更新入度后数值为 $0$，则将该邻点进行入队操作。
 
 同时，利用跑拓扑排序过程中的 $t -> u$ 关系，尝试使用 $ans[t]$ 更新 $ans[u]$（由于存在 $t$ 指向 $u$ 的边，说明 $t$ 比 $u$ 有钱，此时检查两者的安静值，若满足 $quiet[ans[t]] < quiet[ans[u]]$，则用 $ans[t]$ 更新 $ans[u]$）。
