--- a/LeetCode/1701-1710/1705. 吃苹果的最大数目（中等）.md
+++ b/LeetCode/1701-1710/1705. 吃苹果的最大数目（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[1705. 吃苹果的最大数目](https://leetcode-cn.com/problems/maximum-number-of-eaten-apples/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-hfdy0/)** ，难度为 **z中等**。
+这是 LeetCode 上的 **[1705. 吃苹果的最大数目](https://leetcode-cn.com/problems/maximum-number-of-eaten-apples/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-hfdy0/)** ，难度为 **中等**。
 
 
 
