--- a/LeetCode/1701-1710/1705. 吃苹果的最大数目（中等）.md
+++ b/LeetCode/1701-1710/1705. 吃苹果的最大数目（中等）.md
@@ -61,7 +61,7 @@ Tag : 「贪心」、「优先队列」、「堆」
 
 * 首先，如果「$time < n$」或者「堆不为空」，说明「还有苹果未被生成」或者「未必吃掉」，继续模拟；
 * 在当日模拟中，如果「$time < n$」，说明当天有苹果生成，先将苹果 **以二元组 $(time + days[time] - 1, apples[time])$ 形式加入小根堆中**；
-  
+    
     > 其中二元组表示 $(最后食用日期, 当日产生苹果数量)$，同时需要过滤 $apples[time] = 0$ 的情况。
 * 然后尝试从堆中取出「最后食用日期」最早「可食用」的苹果 `cur`，如果堆顶元素已过期，则抛弃；
 * 如果吃掉 `cur` 一个苹果后，仍有剩余，并且最后时间大于当前时间（尚未过期），将 `cur` 重新入堆；
@@ -75,14 +75,15 @@ Tag : 「贪心」、「优先队列」、「堆」
 
 起始，我们先证明边界成立，即 $b_1$ 可以为 $a_1$。
 
-由于贪心解中每次总是取「过期时间最早的」苹果来吃，因此有 $a_1$ 过期时间小于等于 $b_1$ 过期时间，此时如果将最优解中的 $b_1$ 替换为 $a_1$，并不会影响整个序列的长度。
-
 首先该替换操作必然不会使最优序列变长，否则就违背了最优解是长度最长的合法序列这一前提。
+
+由于贪心解中每次总是取「过期时间最早的」苹果来吃，因此有 $a_1$ 过期时间小于等于 $b_1$ 过期时间，需要证明如果将最优解中的 $b_1$ 替换为 $a_1$，并不会影响整个序列的长度。
 
 重点在与该操作是否会使得最优序列长度变短，这需要分情况讨论：
 
-* $a_1$ 不存在与 $(b_2, b_3, ..., b_m)$ 当中，此时直接用 $a_1$ 替换 $b_1$ 自然不会对后面的序列产生影响，也就是说替换后，最优序列合法仍有保证，同时长度不变，结果不会变差；
-* $a_1$ 为 $(b_2, b_3, ..., b_m)$ 中的某个，假设为 $b_i = a_1$，由于 $b_i/a_1$ 在贪心解中的先出堆（过期时间最早），因此必然也有 $b_i/a_1$ 过期时间早于等于 $b_1$ 的过期时间，此时将 $b_1$ 放到 $b_i$ 的位置仍是合法（过期时间比 $b_i/a_1$ 要晚），即将 $b_1$ 和 $b_i/a_1$ 交换位置，最优序列合法仍有保证，同时长度不变，结果不会变差。
+* $a_1$ 不存在与 $(b_2, b_3, ..., b_m)$ 当中，此时直接用 $a_1$ 替换 $b_1$ 自然不会对后面的序列产生影响，也就是说替换后，最优序列合法性仍有保证，同时长度不变，结果不会变差；
+
+* $a_1$ 为 $(b_2, b_3, ..., b_m)$ 中的某个，假设为 $b_i = a_1$，由于 $b_i/a_1$ 在贪心解中的先出堆（过期时间最早），因此必然也有 $b_i/a_1$ 过期时间早于等于 $b_1$ 的过期时间，此时将 $b_1$ 放到 $b_i$ 的位置仍是合法（过期时间比 $b_i/a_1$ 要晚），即将 $b_1$ 和 $b_i/a_1$ 交换位置，最优序列合法性仍有保证，同时长度不变，结果不会变差。
 
 当贪心解和最优解的首个位置决策相同（吃掉的苹果一样），下一位置决策所面临的条件完全相同，归纳推理所依赖的结构没有发生改变，上述分析同样成立。
 
